added goodsell dirac gaugino rges paper and added jack+jones paper and paper with them and martin etc explaining discrepancies.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1120,7 +1120,7 @@ in form of a vector as well.
 All model parameters and their $\beta$-functions are contained in
 the first and second derived classes.  The structure of the
 $\beta$-functions of a general supersymmetric model
-\cite{Jones:1974pg,Jones:1983vk,West:1984dg,Martin:1993yx,Yamada:1993ga,MV94,Fonseca:2011vn,Yam94,Sperling:2013eva,Sperling:2013xqa}
+\cite{Jones:1974pg,Jones:1983vk,West:1984dg,Martin:1993yx,Yamada:1993ga,Jack:1994kd,Jack:1994rk,Yam94,MV94,Fonseca:2011vn,Goodsell:2012fm,Sperling:2013eva,Sperling:2013xqa}
 allows to split these parameters into two classes:
 %
 \begin{enumerate}
@@ -4226,14 +4226,7 @@ Phys. Commun. {\bf 108} (1998) 56; J.~M.~Butterworth, A.~Arbey, L.~Basso, S.~Bel
   %%CITATION = HEP-PH/9311340;%%
   %568 citations counted in INSPIRE as of 24 Sep 2013
 
-%\cite{Fonseca:2011vn}
-\bibitem{Fonseca:2011vn}
-  R.~M.~Fonseca, M.~Malinsky, W.~Porod and F.~Staub,
-  %``Running soft parameters in SUSY models with multiple U(1) gauge factors,''
-  Nucl.\ Phys.\ B {\bf 854} (2012) 28
-  [arXiv:1107.2670 [hep-ph]].
-  %%CITATION = ARXIV:1107.2670;%%
-  %29 citations counted in INSPIRE as of 21 Feb 2014
+
 
 %\cite{Yam94}
 \bibitem{Yam94} 
@@ -4243,6 +4236,41 @@ Phys. Commun. {\bf 108} (1998) 56; J.~M.~Butterworth, A.~Arbey, L.~Basso, S.~Bel
   [hep-ph/9401241].
   %%CITATION = HEP-PH/9401241;%%
   %225 citations counted in INSPIRE as of 24 Sep 2013
+%\cite{}
+\bibitem{Jack:1994kd} 
+  I.~Jack and D.~R.~T.~Jones,
+  %``Soft supersymmetry breaking and finiteness,''
+  Phys.\ Lett.\ B {\bf 333}, 372 (1994)
+  [hep-ph/9405233].
+  %%CITATION = HEP-PH/9405233;%%
+  %195 citations counted in INSPIRE as of 14 Nov 2014
+
+%\cite{Jack:1994rk}
+\bibitem{Jack:1994rk} 
+  I.~Jack, D.~R.~T.~Jones, S.~P.~Martin, M.~T.~Vaughn and Y.~Yamada,
+  %``Decoupling of the epsilon scalar mass in softly broken supersymmetry,''
+  Phys.\ Rev.\ D {\bf 50}, 5481 (1994)
+  [hep-ph/9407291].
+  %%CITATION = HEP-PH/9407291;%%
+  %170 citations counted in INSPIRE as of 14 Nov 2014
+
+%\cite{Fonseca:2011vn}
+\bibitem{Fonseca:2011vn}
+  R.~M.~Fonseca, M.~Malinsky, W.~Porod and F.~Staub,
+  %``Running soft parameters in SUSY models with multiple U(1) gauge factors,''
+  Nucl.\ Phys.\ B {\bf 854} (2012) 28
+  [arXiv:1107.2670 [hep-ph]].
+  %%CITATION = ARXIV:1107.2670;%%
+  %29 citations counted in INSPIRE as of 21 Feb 2014
+
+%\cite{Goodsell:2012fm}
+\bibitem{Goodsell:2012fm} 
+  M.~D.~Goodsell,
+  %``Two-loop RGEs with Dirac gaugino masses,''
+  JHEP {\bf 1301}, 066 (2013)
+  [arXiv:1206.6697 [hep-ph]].
+  %%CITATION = ARXIV:1206.6697;%%
+  %23 citations counted in INSPIRE as of 14 Nov 2014
 
 %\cite{Sperling:2013eva}
 \bibitem{Sperling:2013eva}
@@ -4261,6 +4289,9 @@ Phys. Commun. {\bf 108} (1998) 56; J.~M.~Butterworth, A.~Arbey, L.~Basso, S.~Bel
   [arXiv:1310.7629 [hep-ph]].
   %%CITATION = ARXIV:1310.7629;%%
   %4 citations counted in INSPIRE as of 21 Feb 2014
+
+
+
 
 %\cite{Beringer:1900zz}
 \bibitem{Beringer:1900zz}
