--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ FlexibleSUSY-1.0.3 [not released yet]
 
  * Allow extra user-defined SLHA output blocks
 
+ * Allow user-defined matrix- or vector-like SLHA input parameters
+
  * Bugfix (commit 5f78968): perform residual color contractions before
    stripping group factors.  Thanks to Philip Diessner and Wojciech
    Kotlarski.
